<resources>
    <string name="app_app_name">"喵小仙"</string>
    <string name="app_transition_search_back">transition_search_back</string>
    <string name="app_selected">已选择: %1$d</string>
    <string name="app_login_shareElementName">loginShareElement</string>
    <string name="app_edit_files">编辑文件夹</string>
    <string name="app_waiting">稍等</string>
    <string name="app_scanning">正在扫描</string>
    <string name="app_edit">编辑</string>
    <string name="app_select_all">全选</string>
    <string name="app_click_more_to_exist">再按一次退出应用</string>
    <string name="app_edit_personal_profile">编辑个人简介</string>
    <string name="app_profile">简介：</string>
    <string name="app_select_none">全不选</string>
    <string name="app_msg_notice">消息通知</string>
    <string name="app_search_app_name">搜索APP名称</string>
    <string name="app_search_content_not_null">搜索内容不能为空！</string>
    <string name="app_custom_sorting">自定义排序</string>
    <string name="app_set_serial_number">设置序列号</string>
    <string name="app_confirm">确定</string>
    <string name="app_cancle">取消</string>
    <string name="app_set_prority_sucess">优先级设置成功</string>
    <string name="app_points">提示</string>
    <string name="app_no_file_and_to_creat">还没有文件夹，立即创建？</string>
    <string name="app_creat">创建</string>
    <string name="app_creat_new_file">新建文件夹</string>
    <string name="app_move_apps">移动应用</string>
    <string name="app_select_target_file">选择目标文件夹</string>
    <string name="app_please_select_target_file">请选择目标文件夹</string>
    <string name="app_file_name">文件夹名称</string>
    <string name="app_please_input_file_name">请输入文件夹名称</string>
    <string name="app_creat_file_success">文件夹创建成功</string>
    <string name="app_had_same_file">已有相同的文件夹</string>
    <string name="app_this_app_canot_start">此应用不支持打开</string>
    <string name="app_update_file">修改文件夹</string>
    <string name="app_file_edit_success">文件夹修改成功</string>
    <string name="app_delete_file">删除文件夹</string>
    <string name="app_edit_file_name">修改文件夹</string>
    <string name="app_select_action">选择操作</string>
    <string name="app_data_priceless_confirm_delete">数据无价，确认删除？</string>
    <string name="app_delete_success">删除成功</string>
    <string name="app_install">安装</string>
    <string name="app_uninstall">卸载</string>
    <string name="app_replaced">更新</string>
    <string name="app_open_permission">授权“查看其他应用使用情况”权限！</string>
    <string name="app_classfication_list">类目列表</string>
    <string name="app_longclick_drag_and_click_edit">(长按拖动，单击编辑)</string>
    <string name="app_skip">跳过</string>
    <string name="app_move">移动</string>
    <string name="app_info">详情</string>
    <string name="app_prority">级别</string>
    <string name="app_share">分享</string>
    <string name="app_more">更多</string>
    <string name="app_move_or_copy">移动/复制</string>
    <string name="app_infos">详细信息</string>
    <string name="app_set_prority">设定优先级</string>
    <string name="app_share_to_freids">分享给好友</string>
    <string name="app_open_app"><![CDATA[打开 >>]]></string>
    <string name="app_update">更新</string>
    <string name="app_search_no_more">-----没有更多了-----</string>
    <string name="app_scaned_apps_num">扫描结束,共%1$d个应用！</string>
    <string name="app_hard_scanning">努力扫描中...</string>
    <string name="app_regist">注册</string>
    <string name="app_forget_pwd">忘记密码</string>
    <string name="app_login_next">以后再说</string>
    <string name="app_learn_cat_cry_together">我们一起学猫叫</string>
    <string name="app_wellcome_to_cat">欢迎加入喵家族</string>
    <string name="app_email">邮箱</string>
    <string name="app_pwd">密码</string>
    <string name="app_confirm_pwd">再次确认密码</string>
    <string name="app_login">登录</string>
    <string name="app_regist_shareElementName">regist_shareelement</string>
    <string name="app_regist_success">恭喜您，注册成功！</string>
    <string name="app_get_back_by_email">通过邮箱找回密码</string>
    <string name="app_reback_pwd_shareElementName">reback_pwd_shareelement</string>
    <string name="app_click_to_get_email">点击获取验证邮件 >></string>
    <string name="app_email_can_not_null">邮箱不能为空！</string>
    <string name="app_pwd_can_not_null">密码不能为空！</string>
    <string name="app_please_confirm_pwd">请再次输入密码！</string>
    <string name="app_pwd_not_same">两次输入密码不一致！</string>
    <string name="app_get_back_by_phone">或者：通过客服电话找回</string>
    <string name="app_click_to_call">点击这里语音找回 >></string>
    <string name="app_request_restet_pwd_success_to_email_reset_pwd">重置密码请求成功，请到%1$d进行密码重置操作</string>
    <string name="app_nick_name">昵称</string>
    <string name="app_describtion">个人简介</string>
    <string name="app_user_separator">|</string>
    <string name="app_installed">已安装 %1$d</string>
    <string name="app_collected">已收藏 %1$d</string>
    <string name="app_description_content">简介：%1$s</string>
    <string name="app_nickname_length_too_short">昵称长度太短</string>
    <string name="app_nickname_length_too_long">昵称长度太长</string>
    <string name="app_nickname_invalidate">昵称只能包含中英文、数字、下划线、横线</string>
    <string name="app_over_counter">超出字数限制</string>
    <string name="app_save">保存</string>
    <string name="app_avatar_dialog_title">选择图像照片</string>
    <string name="app_bg_dialog_title">选择个人封面照片</string>
    <string name="app_operation_failed_without_sdcard">您的手机没有SD卡，无法完成操作</string>
    <string name="app_userinfo_updated_is_save">您已经修改了个人信息，确定放弃保存吗？</string>
    <string name="app_give_up">放弃</string>
    <string name="app_leave">留下</string>
    <string name="app_save_success">保存成功！</string>
    <string name="app_save_fail">保存失败！</string>
    <string name="app_personality">个性</string>
    <string name="app_summary_hide_cannot_open_app">不可打开的系统应用将不显示</string>
    <string name="app_title_hide_cannot_open_app">隐藏不能打开的应用</string>
    <string name="app_title_look_other_use">点击授权查看其他应用使用情况</string>
    <string name="app_title_look_other_use_setted">查看其他应用使用权限    (已开启)</string>
    <string name="app_summary_look_other_use">授权后将会开启统计应用使用时长的功能</string>
    <string name="app_title_battery_white_list">点击加入电池优化白名单</string>
    <string name="app_title_battery_white_list_setted">电池优化白名单     (已开启)</string>
    <string name="app_summary_battery_white_list">防止进程被误杀，需要加入白名单中保护</string>
    <string name="app_title_backgroud_run">点击开启后台运行权限</string>
    <string name="app_summary_backgroud_run">如果没有开启后台运行权限，将可能导致应用统计不准确，点击时效等问题</string>
    <string name="app_dialog_title_custom_order">定制排序</string>
    <string name="app_title_custom_order">定制排序</string>
    <string name="app_summary_custom_order">定制自己的排序方式</string>
    <string name="app_routine">常规</string>
    <string name="app_title_auto_test_update">自动检查更新</string>
    <string name="app_title_test_update">手动检查更新</string>
    <string name="app_title_about">关于</string>
    <string name="app_title_user_agreenment">用户协议</string>
    <string name="app_title_app_info">应用信息</string>
    <string name="app_title_update_pwd">修改密码</string>
    <string name="app_title_loginout">退出当前账号</string>
    <string name="app_data">数据</string>
    <string name="app_title_auto_upload">自动备份</string>
    <string name="app_summary_auto_upload">开启后将每天备份一次至云端</string>
    <string name="app_title_upload">备份</string>
    <string name="app_summary_upload">备份数据至云端</string>
    <string name="app_title_download">还原</string>
    <string name="app_summary_download">从云端还原数据,主要用于更换手机后</string>

    <!--sp 的key-->
    <string name="app_sp_hide_cant_open_app">app_sp_hide_cant_open_app</string>
    <string name="app_sp_permission_other_use">app_sp_permission_other_use</string>
    <string name="app_sp_battery_white_list">app_sp_battery_white_list</string>
    <string name="app_sp_backgroud_run">app_sp_backgroud_run</string>
    <string name="app_sp_custom_order">app_sp_custom_order</string>
    <string name="app_sp_auto_check_update">app_sp_auto_check_update</string>
    <string name="app_sp_check_update">app_sp_check_update</string>
    <string name="app_sp_about">app_sp_about</string>
    <string name="app_sp_user_agreenment">app_sp_user_agreenment</string>
    <string name="app_sp_app_info">app_sp_app_info</string>
    <string name="app_sp_reset_pwd">app_sp_reset_pwd</string>
    <string name="app_sp_login_out">app_sp_login_out</string>
    <string name="app_sp_auto_upload">app_sp_auto_upload</string>
    <string name="app_sp_upload">app_sp_upload</string>
    <string name="app_sp_download">app_sp_download</string>


    <string name="app_help_suggest">帮助建议</string>
    <string name="app_help">帮助</string>
    <string name="app_goto_heip">任何疑问，都可拨打客服电话或者添加qq寻求帮助！</string>
    <string name="app_click_to_phone">客服：%1$s\n 点我拨打</string>
    <string name="app_click_copy_qq">QQ：%1$s\n 点我复制</string>
    <string name="app_suggestions">建议反馈</string>
    <string name="app_your_concat_information">您的联系方式</string>
    <string name="app_suggest_content">反馈内容</string>
    <string name="app_commit">提交</string>
    <string name="app_copy_success">复制成功！</string>
    <string name="app_custom_service_qq">1427748211</string>
    <string name="app_custom_service_phone">18691788126</string>
    <string name="app_suggestion_cant_empy">建议内容不能为空！</string>
    <string name="app_cant_submit_frequently">不能频繁提交！</string>
    <string name="app_upload_success">上传成功！</string>
    <string name="app_uploading">正在上传</string>
    <string name="app_reset_pwd">密码重置</string>
    <string name="app_input_old_pwd">请输入旧密码</string>
    <string name="app_input_new_pwd">请输入新密码</string>
    <string name="app_reinput_new_pwd">请再次输入新密码</string>
    <string name="app_new_pwd_cant_empy">新密码不能为空</string>
    <string name="app_reset_pwd_succes">密码修改成功，可以用新密码进行登录啦</string>
    <string name="app_reset_pwd_fail">密码修改失败:</string>
    <string name="app_user_agreenment">用户协议</string>
    <string name="app_load_data_fail">数据获取失败</string>
    <string name="app_copyright">Copyright @2019-2019 Tj24.All\nRights Reserved.</string>
    <string name="app_about_appinfo">一款全新的，简单的，可定制的，功能强大的，Android应用管理器。</string>
    <string name="app_about">关于</string>
    <string name="app_version_neednot_update">版本无更新</string>
    <string name="app_version_emptyfield">请检查你AppVersion表的必填项，1、target_size（文件大小）是否填写；2、path或者android_url两者必填其中一项。</string>
    <string name="app_viersion_ignored">该版本已被忽略更新</string>
    <string name="app_version_error_sizeformat">请检查target_size填写的格式，请使用file.length()方法获取apk大小。</string>
    <string name="app_version_timeout">查询出错或查询超时</string>
    <string name="app_granted_permission">已经授权！</string>
    <string name="app_no_login_and_to_login">亲，您还没有登录，点击确定立马登录！！</string>
    <string name="app_confirm_login_out">确定退出登录？</string>
    <string name="app_login_out_sucess">已经退出登录</string>
    <string name="app_settings">设置</string>
    <string name="app_suggest">建议</string>
    <string name="app_permission">权限</string>
    <string name="app_important_more">非常重要！</string>
    <string name="app_request_back_run_dialog_content">请关闭自动管理，必须改成[手动管理]，允许自启动和后台活动，否则会引起应用统计不准确等问题！</string>
    <string name="app_go_set">去设置</string>

</resources>
