<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/app_permission">
        <Preference
                android:icon="@drawable/app_ico_drawer_copy"
                android:key="@string/app_sp_permission_other_use"
                android:title="@string/app_title_look_other_use"
                android:summary="@string/app_summary_look_other_use"/>
        <Preference
                android:icon="@drawable/app_ico_drawer_copy"
                android:key="@string/app_sp_battery_white_list"
                android:title="@string/app_title_battery_white_list"
                android:summary="@string/app_summary_battery_white_list"/>
        <Preference
                android:icon="@drawable/app_ico_drawer_copy"
                android:key="@string/app_sp_backgroud_run"
                android:title="@string/app_title_backgroud_run"
                android:summary="@string/app_summary_backgroud_run"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/app_personality">
        <SwitchPreferenceCompat
                android:icon="@drawable/app_ico_drawer_copy"
                android:singleLineTitle="true"
                android:key="@string/app_sp_hide_cant_open_app"
                android:defaultValue="false"
                android:summary="@string/app_summary_hide_cannot_open_app"
                android:title="@string/app_title_hide_cannot_open_app"/>
        <SwitchPreferenceCompat
                android:icon="@drawable/app_ico_drawer_copy"
                android:key="@string/app_sp_auto_check_update"
                android:defaultValue="true"
                android:title="@string/app_title_auto_test_update" />
        <Preference
                android:icon="@drawable/app_ico_drawer_copy"
                android:padding = "10dp"
                android:key="@string/app_sp_check_update"
                android:title="@string/app_title_test_update"/>
        <MultiSelectListPreference
                android:icon="@drawable/app_ico_drawer_copy"
                android:key="@string/app_sp_custom_order"
                android:dialogTitle="@string/app_dialog_title_custom_order"
                android:entries="@array/app_entries_orders"
                android:entryValues="@array/app_entries_orders_values"
                android:summary="@string/app_summary_custom_order"
                android:title="@string/app_title_custom_order"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/app_routine">
        <Preference
                android:icon="@drawable/app_ico_drawer_copy"
                android:key="@string/app_sp_about"
                android:title="@string/app_title_about"/>
        <Preference
                android:icon="@drawable/app_ico_drawer_copy"
                android:key="@string/app_sp_user_agreenment"
                android:title="@string/app_title_user_agreenment"/>
        <Preference
                android:icon="@drawable/app_ico_drawer_copy"
                android:key="@string/app_sp_app_info"
                android:title="@string/app_title_app_info"/>
        <Preference
                android:icon="@drawable/app_ico_drawer_copy"
                android:key="@string/app_sp_reset_pwd"
                android:title="@string/app_title_update_pwd"/>
        <Preference
                android:icon="@drawable/app_ico_drawer_copy"
                android:key="@string/app_sp_login_out"
                android:title="@string/app_title_loginout"/>
    </PreferenceCategory>
</PreferenceScreen>