<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/app_data">
        <SwitchPreferenceCompat
                android:key="@string/app_sp_auto_upload"
                android:defaultValue="true"
                android:icon="@drawable/ico_drawer_copy"
                android:summary="@string/app_summary_auto_upload"
                android:title="@string/app_title_auto_upload"/>
        <Preference
                android:key="@string/app_sp_upload"
                android:icon="@drawable/ico_drawer_copy"
                android:summary="@string/app_summary_upload"
                android:title="@string/app_title_upload"/>
        <Preference
                android:key="@string/app_sp_download"
                android:icon="@drawable/ico_drawer_copy"
                android:summary="@string/app_summary_download"
                android:title="@string/app_title_download"/>
    </PreferenceCategory>
</PreferenceScreen>