<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="160dp"
            android:background="@drawable/bg_app_editpopup"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/tv_move"
                android:padding="10dp"
                android:text="@string/app_move_or_copy"
                android:foreground="?selectableItemBackground"
                android:textColor="@color/base_secondary_text"
                android:textSize="@dimen/app_edit_popup_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tv_uninstall"
                android:padding="10dp"
                android:text="@string/app_uninstall"
                android:foreground="?selectableItemBackground"
                android:textColor="@color/base_secondary_text"
                android:textSize="@dimen/app_edit_popup_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/tv_info"
                android:padding="10dp"
                android:text="@string/app_infos"
                android:foreground="?selectableItemBackground"
                android:textColor="@color/base_secondary_text"
                android:textSize="@dimen/app_edit_popup_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/tv_prority"
                android:padding="10dp"
                android:text="@string/app_set_prority"
                android:foreground="?selectableItemBackground"
                android:textColor="@color/base_secondary_text"
                android:textSize="@dimen/app_edit_popup_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/tv_share"
                android:padding="10dp"
                android:text="@string/app_share_to_freids"
                android:foreground="?selectableItemBackground"
                android:textColor="@color/base_secondary_text"
                android:textSize="@dimen/app_edit_popup_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

