<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.HelpSuggestActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:fitsSystemWindows="true"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/app_help_suggest"
            app:titleTextColor="@color/base_white_text"
            tools:ignore="MissingConstraints" />

    <TextView
            android:id="@+id/appTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/app_help"
            android:textColor="@color/base_black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
            android:id="@+id/appTextview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/app_goto_heip"
            android:textColor="@color/base_black_666"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/appTextview"
            app:layout_constraintTop_toBottomOf="@+id/appTextview" />


    <Button
            android:id="@+id/btn_call"
            android:padding="10dp"
            android:background="@color/base_colorPrimary"
            android:foreground="?attr/selectableItemBackground"
            android:textColor="@color/base_white_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:lineSpacingExtra="10dp"
            android:text="@string/app_click_to_phone"
            app:layout_constraintEnd_toStartOf="@+id/appGuideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appTextview2" />

    <Button
            android:id="@+id/btn_qq"
            android:padding="10dp"
            android:background="@color/base_colorPrimary"
            android:foreground="?attr/selectableItemBackground"
            android:textColor="@color/base_white_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:lineSpacingExtra="10dp"
            android:tooltipText="@string/app_click_copy_qq"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/appGuideline"
            app:layout_constraintTop_toBottomOf="@+id/appTextview2" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/appGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/appTextview5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/app_suggestions"
            android:textColor="@color/base_black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_call" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/appTextinputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appTextview5">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_concat_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_your_concat_information" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/appTextinputlayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appTextinputlayout">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_suggest_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_suggest_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/btn_submint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/app_commit"
            android:foreground="?attr/selectableItemBackground"
            android:textSize="20sp"
            android:textColor="@color/base_white_text"
            android:background="@color/base_colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appTextinputlayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>