<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="@color/base_colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.RegistActivity">
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">
        <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:src="@mipmap/app_ic_launcher"
                android:transitionName="@string/app_reback_pwd_shareElementName" />
    </FrameLayout>
    <LinearLayout
            android:id="@+id/ll_inputElements"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="4"
            android:visibility="visible"
            tools:visibility="visible">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                tools:ignore="UselessParent">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/app_get_back_by_email"
                    android:textColor="@color/base_white_text"
                    android:textSize="24sp" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:baselineAligned="false"
                    android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="35dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="35dp"
                        app:errorTextAppearance="@style/app_EditTextErrorAppearance">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/app_email"
                            android:imeOptions="actionGo"
                            android:inputType="number"
                            android:maxLength="20"
                            android:maxLines="1"
                            android:textColor="@color/base_white_text" />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                        android:id="@+id/btn_reback_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="35dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="35dp"
                        android:text="@string/app_click_to_get_email"
                        android:textColor="@color/base_colorPrimary"
                        android:textSize="16sp"
                        android:background="@drawable/app_login_button_bg"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/app_get_back_by_phone"
                    android:textColor="@color/base_white_text"
                    android:textSize="24sp" />
            <Button
                    android:id="@+id/btn_call"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="35dp"
                    android:text="@string/app_click_to_call"
                    android:textColor="@color/base_colorPrimary"
                    android:textSize="16sp"
                    android:background="@drawable/app_login_button_bg"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>